feat(events): provides index for events with pagination

--- a/app/translations/app.fr.yml
+++ b/app/translations/app.fr.yml
@@ -1,2 +1,5 @@
----
-"Events": "Événements"
+'Events': 'Événements'
+'Event Title': 'Événement'
+'Begin Date': 'Date de début'
+'End Date': 'Date de fin'
+'Event Description': 'Description'
